--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,10 +1,10 @@
 .btn {
-    padding: 10px 16px;
+    width: 137px;
+    padding: 10px;
     border-radius: 5px;
     color: #000;
     text-align: center;
     font-family: Inter;
     font-size: 14px;
     font-weight: 600;
-
 }
