--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,5 @@
 @import 'reset.scss';
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
+@import 'variables.scss';
 .App {
     text-align: center;
     margin: 90px auto;
